k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: urara-vision
  labels:
    app.kubernetes.io/part-of: urara-vision
